--- a/publication-type/3/index.html
+++ b/publication-type/3/index.html
@@ -577,7 +577,7 @@
       <h2><a href="/publication/job-market-paper/" >Productivity, Pollution, and Place</a></h2>
       <div class="article-style">
         
-          Cost-benefit analyses of air pollution regulations typically focus on health-related benefits. This paper shows that incorporating location-specific labor productivity gains and spatial labor reallocation can yield very different income benefits for …
+          Cost-benefit analyses of air pollution regulations typically focus on health-related benefits. This paper examines whether regulations that produce similar health benefits can yield vastly different income benefits when gains from location-specific …
         
       </div>
     </div>
