--- a/index.html
+++ b/index.html
@@ -728,18 +728,18 @@
 
     <p>Hello, and thank you for visiting my website!</p>
 <p>I am an economist currently on an off-market postdoctoral fellowship at the Bren School at UC Santa Barbara. I completed my PhD from the LSE in 2022, where I was affiliated with the Grantham Research Institute and the STICERD EEE program.</p>
-<p>My JMP studies the productivity impacts of air pollution control in India. I find that reducing emissions from urban sources such as vehicles leads to 5 times larger income gains compared to reducing rural ag fires, holding health benefits fixed. The productivity of cleaned-up places and agglomeration gains from spatial labor reallocation explain this difference.</p>
+<p>My JMP studies income gains from air pollution control in India. I find that these income gains depend upon the productivity of cleaned-up places, and on the agglomeration gains from spatial labor reallocation in general equilibrium.</p>
 <p>In general, I seek to study the interactions between economic growth and environmental change in low and middle income countries, particularly the role of policy in enabling people and firms to mitigate or adapt to such change.</p>
 <h3 id="references">References</h3>
 <ul>
 <li>
-<a href="https://sites.google.com/site/gharadbryan" target="_blank" rel="noopener">Gharad T. Bryan</a></li>
-<li>
 <a href="https://robinburgess.com" target="_blank" rel="noopener">Robin Burgess</a></li>
 <li>
-<a href="https://tammacarleton.com" target="_blank" rel="noopener">Tamma Carleton</a></li>
-<li>
 <a href="https://kylemeng.com" target="_blank" rel="noopener">Kyle C. Meng</a></li>
+<li>
+<a href="https://sites.google.com/site/gharadbryan" target="_blank" rel="noopener">Gharad T. Bryan</a></li>
+<li>
+<a href="https://tammacarleton.com" target="_blank" rel="noopener">Tamma Carleton</a></li>
 </ul>
 
 
@@ -914,7 +914,7 @@
   
   <a href="/publication/job-market-paper/" class="summary-link">
     <div class="article-style">
-      <p>Cost-benefit analyses of air pollution regulations typically focus on health-related benefits. This paper shows that incorporating location-specific labor productivity gains and spatial labor reallocation can yield very different income benefits for regulations that otherwise would produce similar health-related benefits. Income benefits can differ because labor productivities may vary in the places where people experience lower pollution, and because the migration of people to those places may reinforce agglomeration economies. To understand these mechanisms, I build a spatial equilibrium model that accounts for the movement of both pollution and people across space. I apply this model to study income gains from two key emissions control policies that target non-industrial sources in India and produce similar total exposure reductions, but in very different places. One policy controls agricultural fires in northwestern India that spread pollution across much of north India, and another policy reduces localized emissions from sources such as vehicles within India’s 20 largest cities. Accounting only for differential labor productivity in the places experiencing lower pollution, I find that the two policies increase GDP by 0.32% and 0.91% respectively. Further accounting for differential impacts of agglomeration economies from labor reallocation to cleaner places leads to GDP gains of 0.34% and 1.88% respectively. Targeting urban emissions reduces pollution in more productive cities, and the reallocation of workers to those cities amplifies agglomeration economies, a distinction that would not emerge from more typical cost-benefit analyses based solely on health benefits.</p>
+      <p>Cost-benefit analyses of air pollution regulations typically focus on health-related benefits. This paper examines whether regulations that produce similar health benefits can yield vastly different income benefits when gains from location-specific labor productivity and spatial labor reallocation are incorporated. Income gains can differ because labor productivities may vary in the places where people experience lower pollution, and because the migration of people to those places may reinforce agglomeration economies. To understand these mechanisms, I build a spatial equilibrium model that accounts for the movement of both pollution and people across space. I apply this model to study income gains from two key emissions control policies that target non-industrial sources in India and produce similar total exposure reductions, but in very different places. One policy controls agricultural fires in northwestern India that spread pollution across much of north India, and another policy reduces localized emissions from sources such as vehicles within India’s 20 largest cities. Accounting only for differential labor productivity in the places experiencing lower pollution, I find that the two policies increase GDP by 0.32% and 0.91% respectively. Further accounting for differential impacts of agglomeration economies from labor reallocation to cleaner places leads to GDP gains of 0.34% and 1.88% respectively. Targeting urban emissions reduces pollution in more productive cities, and the reallocation of workers to those cities amplifies agglomeration economies, a distinction that would not emerge from more typical cost-benefit analyses based solely on health benefits.</p>
     </div>
   </a>
   
