--- a/publication/index.html
+++ b/publication/index.html
@@ -693,13 +693,13 @@
   
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/publication/job-market-paper/">Productivity, Pollution, and Place</a>
+    <a href="/publication/job-market-paper/">Pollution, Productivity, and Place</a>
   </h3>
 
   
   <a href="/publication/job-market-paper/" class="summary-link">
     <div class="article-style">
-      <p>Cost-benefit analyses of air pollution regulations typically focus on health-related benefits. This paper examines whether regulations that produce similar health benefits can yield vastly different income benefits when gains from location-specific labor productivity and spatial labor reallocation are incorporated. Income gains can differ because labor productivities may vary in the places where people experience lower pollution, and because the migration of people to those places may reinforce agglomeration economies. To understand these mechanisms, I build a spatial equilibrium model that accounts for the movement of both pollution and people across space. I apply this model to study income gains from two key emissions control policies that target non-industrial sources in India and produce similar total exposure reductions, but in very different places. One policy controls agricultural fires in northwestern India that spread pollution across much of north India, and another policy reduces localized emissions from sources such as vehicles within India’s 20 largest cities. Accounting only for differential labor productivity in the places experiencing lower pollution, I find that the two policies increase GDP by 0.32% and 0.91% respectively. Further accounting for differential impacts of agglomeration economies from labor reallocation to cleaner places leads to GDP gains of 0.34% and 1.88% respectively. Targeting urban emissions reduces pollution in more productive cities, and the reallocation of workers to those cities amplifies agglomeration economies, a distinction that would not emerge from more typical cost-benefit analyses based solely on health benefits.</p>
+      <p>How do the health benefits of reducing air pollution translate into aggregate income gains? Income gains can differ from health benefits because labor productivity may vary in the places where people experience lower pollution, and because labor reallocation to those places may reinforce agglomeration economies. This paper shows that incorporating two physical features of pollution sources - their location and long-distance dispersion tendency - can alter the importance of labor productivity and reallocation, and lead to very different income gains from pollution control policies that otherwise produce similar population health benefits. To understand these interactions, I develop a spatial equilibrium model that accounts for the movement of both pollution and people across space. I apply this model to study income gains from two archetypal pollution control policies that target non-industrial sources in India andproduce similar population exposure reductions, but in very different places. One policy controls agricultural fires in northwestern India that spread pollution across much of north India, and another policy reduces localized emissions from sourcessuch as vehicles within India’s 10 largest cities. Accounting only for differential labor productivity in the places experiencing lower pollution, I find that the latter policy leads to a 3 times larger GDP gain relative to the former. Further accounting for labor reallocation and agglomeration economies leads to a 6 times larger GDP gain. These results have implications for spatial targeting of pollution, especially in polluted-yet-poor LMICs.</p>
     </div>
   </a>
   
@@ -716,8 +716,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/Tiwari-JMP.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
