--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
     <p>Hello, and thank you for visiting my website!</p>
 <p>I am an economist currently on an off-market postdoctoral fellowship at the Bren School at UC Santa Barbara. I completed my PhD from the LSE in 2022, where I was affiliated with the Grantham Research Institute and the STICERD EEE program.</p>
 <p>My JMP studies income gains from targeted air pollution control in India. I find that targeting urban pollution sources leads to much larger gains than targeting sources that reduce rural pollution, because urban areas are inherently more productive, and migration to cities after clean-up increases productivity further</p>
-<p>In general, I seek to study the interactions between economic growth and environmental change in low and middle income countries, particularly the role of policy in enabling people and firms to mitigate or adapt to such change.</p>
+<p>In general, I seek to study the interactions between economic growth and environmental change in low and middle income countries, particularly the role of policy in enabling people and firms to mitigate or adapt to environmental damage.</p>
 <h3 id="references">References</h3>
 <ul>
 <li>
