Changes to CV and WIP

--- a/index.html
+++ b/index.html
@@ -1473,7 +1473,7 @@
       <h4 id="heading"></h4>
 <p><strong>Highways and the Spatial Distribution of Industrial Water Pollution</strong></p>
 <h4 id="heading-1"></h4>
-<p><strong>The Impact of Air Pollution on Workers and Firms in India</strong> (with Tamma Carleton and Shefali Khanna)</p>
+<p><strong>The Heterogeneous Impacts of Air Pollution on Workers and Firms in India</strong> (with Tamma Carleton and Shefali Khanna)</p>
 <h4 id="heading-2"></h4>
 <p><strong>Transport Costs Reductions and Air Pollution Exposure</strong> (with Tamma Carleton and Kyle Meng)</p>
 <h4 id="heading-3"></h4>
