--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
     <p>Welcome to my website!</p>
 <p>I am an economist currently on an off-market postdoctoral fellowship at the Bren School at UC Santa Barbara. I completed my PhD from the LSE in 2022, where I was affiliated with the Grantham Research Institute and the STICERD EEE program.</p>
 <p>I seek to study the interactions between economic growth and environmental change in low and middle income countries, particularly the role of policy in enabling people and firms to mitigate or adapt to environmental damage.</p>
-<p>In my JMP, I demonstrate that the importance of migration for GDP gains in general equilibrium from targeted air pollution control depends on the geography of the pollution source. Holding health benefits fixed, migration accounts for half of the GDP gains from targeting localized urban sources like vehicles, as opposed to &lt;1% of gains from abating rural sources like agricultural fires that also increase urban pollution due to long-distance smoke dispersion.</p>
+<p>In my JMP, I demonstrate that the importance of migration for GDP gains in general equilibrium from targeted air pollution control depends on the geography of the pollution source. Comparing abatement of localized urban sources like vehicles with distant rural sources like agricultural fires in India, I find that migration to cities accounts for half of the GDP gains for the former as opposed to &lt;1% of gains for the latter. Rural abatement cleans up rural area more and reduces migration incentives. </p>
 <h3 id="references">References</h3>
 <ul>
 <li>
