--- a/index.html
+++ b/index.html
@@ -727,8 +727,11 @@
     
     
 
-<p>Welcome to my website!</p>
-<p>I am an environmental economist. I study the interactions between economic growth and environmental change in low and middle income countries, particularly the role of policy in enabling people and firms to mitigate or adapt to environmental damage. I am currently a postdoctoral scholar with the Energy Policy Institute at the University of Chicago, based out of India.</p>
+
+<p></p>
+<p>I am a postdoctoral scholar at the Energy Policy Institute at the University of Chicago, based out of India. Before this, I was a postdoctoral fellow at the Environmental Markets Lab at the University of California, Santa Barbara. I hold a PhD in Environmental Economics from the London School of Economics, a Masters degree in Public Policy from UC Berkeley, and an undergraduate degree in Computer Science and Engineering from the Indian Institute of Technology (ISM Dhanbad). </p>
+<p> My research is broadly about the understanding the interactions between economic growth and environmental change, including air and water pollution, climate change, and groundwater depletion. </p>
+<p>Welcome to my website.</p>
 
 
     <div class="row">
