--- a/index.html
+++ b/index.html
@@ -292,6 +292,16 @@
 
   <title>Anshuman Tiwari</title>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P1KV5RQW9R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P1KV5RQW9R');
+</script>
+
 </head>
 
 
