--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@
       <h4 id="heading"></h4>
 <p><strong>Highways and the Spatial Distribution of Industrial Water Pollution</strong></p>
 <h4 id="heading-1"></h4>
-<p><strong>The Heterogeneous Impacts of Air Pollution on Workers and Firms in India</strong> (with Shefali Khanna)</p>
+<p><strong>The Heterogeneous Impacts of Air Pollution on Workers and Firms in India</strong> (with Ed Rubin and Shefali Khanna)</p>
 <h4 id="heading-2"></h4>
 <p><strong>The Urgency of Climate Action: Equity impacts of climate mitigation pathways</strong> (with Tamma Carleton)</p>
 
