--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
   <span class="middot-divider"></span>
   <span class="pub-publication">
     
-      Conditional accepted, Journal of the Association of Environmenal and Resource Economists.
+      Conditional accepted, Journal of the Association of Environmental and Resource Economists.
     
   </span>
   
