--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
           
         
         <li>
-          <a href="https://scholar.google.com/citations?user=Zsyn7U8AAAAJ" target="_blank" rel="noopener">
+          <a href="https://scholar.google.com/citations?user=FFTIrQkAAAAJ" target="_blank" rel="noopener">
             <i class="ai ai-google-scholar big-icon"></i>
           </a>
         </li>
