--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
   
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/publication/job-market-paper/">Pollution, Productivity, and Place</a>
+    <a href="/publication/job-market-paper/">Productivity Impact of Emissions Control When People and Particulates Are Mobile</a>
   </h3>
 
   
