--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 
 
 <p></p>
-<p>I am a postdoctoral scholar at the Energy Policy Institute at the University of Chicago - India program. Before this, I was a postdoctoral fellow at the Environmental Markets Lab at the University of California, Santa Barbara. I hold a PhD in Environmental Economics from the London School of Economics, a Masters degree in Public Policy from UC Berkeley, and an undergraduate degree in Computer Science and Engineering from the Indian Institute of Technology (ISM Dhanbad). </p>
+<p>I am a postdoctoral scholar at the Energy Policy Institute at the University of Chicago - India program. Before this, I was a postdoctoral fellow at the Environmental Markets Lab at the University of California, Santa Barbara. I hold a PhD in Environmental Economics from the London School of Economics, a Masters degree in Public Policy from UC Berkeley, and an undergraduate degree in Computer Science and Engineering from the Indian Institute of Technology (IIT-ISM Dhanbad). </p>
 <p> My research is broadly about understanding how to promote sustainable economic growth in developing countries. I have studied environmental issues including air and water pollution, climate change, and groundwater depletion. </p>
 <p>Welcome to my website.</p>
 
@@ -838,7 +838,7 @@
   
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/publication/job-market-paper/">Productivity impacts of pollution control when people and particulates are mobile</a>
+    <a href="/publication/job-market-paper/">Aggregate productivity impacts of air pollution when people and particulates are mobile</a>
   </h3>
 
   
@@ -1274,6 +1274,8 @@
 <h4 id="heading-2"></h4>
 <p><strong>Behavioral traits and bill nonpayments in India</strong> (with Fiona Burlig and Anant Sudarshan)</p>
 <h4 id="heading-2"></h4>
+<p><strong>The heterogeneous impacts of air pollution on workers and firms in India</strong> (with Shefali Khanna)</p>
+<h4 id="heading-1"></h4>
 <p><strong>How should we estimate income elasticites for climate damages?</strong> (with James Rising)</p>
 
     </div>
