--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
   
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/publication/gw-airpol/">Air pollution trade-off with a groundwater conservation policy in India</a>
+    <a href="/publication/gw-airpol/">Do non-market policies conserve groundwater?</a>
   </h3>
 
   
