--- a/index.html
+++ b/index.html
@@ -1271,7 +1271,7 @@
 <h4 id="heading-2"></h4>
 <p><strong>The integration of renewables into the Indian electricity grid</strong> (with Fiona Burlig, Akshaya Jha and Louis Preonas)</p>
 <h4 id="heading-2"></h4>
-<p><strong>Behavioral traits and bill nonpayments in India</strong> (with Fiona Burlig and Anant Sudarshan)</p>
+<p><strong>Behavioral traits and electricity bill nonpayments in India</strong> (with Fiona Burlig and Anant Sudarshan)</p>
 <h4 id="heading-2"></h4>
 <p><strong>The heterogeneous impacts of air pollution on workers and firms in India</strong> (with Shefali Khanna and Ed Rubin)</p>
 <h4 id="heading-1"></h4>
