--- a/index.html
+++ b/index.html
@@ -1337,7 +1337,7 @@
 <p><em>&ldquo;The classes were really informative and engaging&rdquo;</em></p>
 </li>
 <li>
-<p><em>&ldquo;The fact that the professor and TA really knew what they were doing and were passionate about the material&hellip;&rdquo;</em></p>
+<p><em>&ldquo;...the professor and TA really knew what they were doing and were passionate about the material&hellip;&rdquo;</em></p>
 </li>
 <li>
 <p><em>&ldquo;The quality of teaching exceeded my expectations. Both teacher and lecturer were excellent in their execution of teaching the course materials.&rdquo;</em></p>
