--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
   <span class="middot-divider"></span>
   <span class="pub-publication">
     
-      Forthcoming, Journal of the Association of Environmenal and Resource Economists.
+      Accepted, Journal of the Association of Environmenal and Resource Economists.
     
   </span>
   
