--- a/index.html
+++ b/index.html
@@ -699,7 +699,6 @@
 <p></p>
 <p>I am a postdoctoral scholar at the Energy Policy Institute at the University of Chicago - India program. Before this, I was the Environmental Defense Fund postdoctoral fellow at the Environmental Markets Lab at the University of California, Santa Barbara. I hold a PhD in Environmental Economics from the London School of Economics, a Masters degree in Public Policy from UC Berkeley, and an undergraduate degree in Computer Science and Engineering from the Indian Institute of Technology (ISM) Dhanbad. </p>
 <p>My research is broadly about understanding how to promote sustainable economic growth in developing countries. I have studied environmental issues including air and water pollution, climate change, and groundwater depletion. </p>
-<p>Welcome to my website.. </p>
 
     <div class="row">
 
@@ -817,7 +816,7 @@
   <span class="middot-divider"></span>
   <span class="pub-publication">
     
-      Accepted, Journal of the Association of Environmenal and Resource Economists.
+      Accepted, Journal of the Association of Environmental and Resource Economists.
     
   </span>
   
