--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
   
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/publication/job-market-paper/">Productivity impacts of air pollution when people and particulates are mobile</a>
+    <a href="/publication/job-market-paper/">Productivity impacts of pollution control when people and particulates are mobile</a>
   </h3>
 
   
