--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
   <span class="middot-divider"></span>
   <span class="pub-publication">
     
-      Journal of the Association of Environmental and Resource Economists. 12(5).
+      Journal of the Association of Environmental and Resource Economists. Volumne 12, Number 5.
     
   </span>
   
