--- a/index.html
+++ b/index.html
@@ -1329,17 +1329,18 @@
     </div>
     <div class="col-12 col-lg-8">
       <h4 id="heading"></h4>
-<p><strong>Do non-market policies conserve groundwater?</strong></p>
+<p><strong>Shallow wells, deep losses: the limits of uniform groundwater regulation</strong></p>
 <h4 id="heading-2"></h4>
-<p><strong>Global equity implications of climate mitigation accounting for heterogeneous adaptation</strong> (with Tamma Carleton)</p>
+<p><strong>Rapid and sustained cooling reduces global inequity in climate impacts</strong> With Tamma Carleton (UC Berkeley)</p>
 <h4 id="heading-2"></h4>
-<p><strong>The integration of renewables into the Indian electricity grid</strong> (with Fiona Burlig, Akshaya Jha and Louis Preonas)</p>
+<p><strong>The integration of renewables into the Indian electricity grid</strong>. With Fiona Burlig (UChicago), Akshaya Jha (CMU) and Louis Preonas(UMD)</p>
 <h4 id="heading-2"></h4>
-<p><strong>Behavioral traits and electricity bill nonpayments in India</strong> (with Fiona Burlig and Anant Sudarshan)</p>
+<p><strong>Social norms, behavioral traits and electricity bill nonpayments in India</strong>DERF grant USD 35,000. With Fiona Burlig (UChicago) and Anant Sudarshan (Warwick)</p>
 <h4 id="heading-2"></h4>
-<p><strong>The heterogeneous impacts of air pollution on workers and firms in India</strong> (with Shefali Khanna and Ed Rubin)</p>
+<p><strong>The heterogeneous impacts of air pollution from coal plants in India</strong>. IGC grant GBP 16,000. With Shefali Khanna (LSE) and Ed Rubin (UOregon)</p>
 <h4 id="heading-1"></h4>
-<p><strong>How should we estimate income elasticites for climate damages?</strong> (with James Rising)</p>
+<p><strong>How should we estimate income elasticites for climate damages?</strong> With James Rising</p>
+<p><strong>Vehicle electrification, air pollution and the role of time-of-day tariffs</strong>. IGC grant GBP 28,500. With Rahul Tongia (CSEP), Anomitro Chatterjee (LSE), Piyush Bhardwaj (CSTEP)</p>
 
     </div>
   
