--- a/index.html
+++ b/index.html
@@ -694,10 +694,8 @@
 
     
     
-
-
 <p></p>
-<p>I am a postdoctoral scholar at the <a href="https://epic.uchicago.in/scholars/">Energy Policy Institute at the University of Chicago, India program</a>. I have been an Environmental Defense Fund fellow at the Environmental Markets Lab at the University of California, Santa Barbara. I conducted doctoral research at the London School of Economics, earning a PhD in Environmental Economics. I also hold a Master of Public Policy degree from UC Berkeley, and Bachler of Technology in Computer Science and Engineering from the Indian Institute of Technology (ISM) Dhanbad. </p>
+<p>I am postdoctoral scholar at the <a href="https://epic.uchicago.in/scholars/">Energy Policy Institute at the University of Chicago, India program</a>. I have been an Environmental Defense Fund fellow at the <a href="https://emlab.ucsb.edu/">Environmental Markets Lab</a> at the University of California, Santa Barbara. I conducted doctoral research at the London School of Economics where I was a Grantham Institute fellow and a member of the STICERD research group on the economics of energy and environment. I also hold a Master of Public Policy degree from UC Berkeley, and Bachler of Technology in Computer Science and Engineering from the Indian Institute of Technology (ISM) Dhanbad. </p>
 <p>I am an applied economist, and my research is at the intersection of environmental/climate change and economic geography. I primarily work on developing countries such as India, and the research questions of interest to me are strongly informed by their specific institutions and political economy. I have studied air and water pollution, climate change, and groundwater depletion. I use large geospatial and administrative datasets, as well as machine learning and generative AI methods to overcome missing data challenges. I have utilized structural models, causal inference methods, and big data in my work. </p>
 
     <div class="row">
