--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
 <h4 id="heading-2"></h4>
 <p><strong>The integration of renewables into the Indian electricity grid</strong>. With Fiona Burlig (UChicago), Akshaya Jha (CMU) and Louis Preonas(UMD)</p>
 <h4 id="heading-2"></h4>
-<p><strong>Social norms, behavioral traits and electricity bill nonpayments in India</strong>DERF grant USD 35,000. With Fiona Burlig (UChicago) and Anant Sudarshan (Warwick)</p>
+<p><strong>Social norms, behavioral traits and electricity bill nonpayments in India</strong>. DERF grant USD 35,000. With Fiona Burlig (UChicago) and Anant Sudarshan (Warwick)</p>
 <h4 id="heading-2"></h4>
 <p><strong>The heterogeneous impacts of air pollution from coal plants in India</strong>. IGC grant GBP 18,842. With Shefali Khanna (LSE) and Ed Rubin (UOregon)</p>
 <h4 id="heading-1"></h4>
