--- a/index.html
+++ b/index.html
@@ -1481,7 +1481,7 @@
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
 
-    <h1>Policy work <br/> <br/></h1>
+    <h1>Other publications <br/> <br/></h1>
     
 
   </div>
