--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,7 @@
     
     <a href="/policy-articles/banerjee-interview/" class="summary-link">
       <div class="article-style">
-        A discussion on the challenges and opportunities posed by Aadhaar (India&rsquo;s Unique Identity Number program)
+        An interview on the challenges and opportunities posed by Aadhaar (India&rsquo;s Unique Identity Number program)
       </div>
     </a>
     
