--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,7 @@
     </div>
     <div class="col-12 col-lg-8">
       <h4 id="heading"></h4>
-<p><strong>Shallow gains, deep losses: the limits of uniform groundwater regulation</strong></p>
+<p><strong>Compliance without conservation when instrumentsinteract</strong></p>
 <h4 id="heading-2"></h4>
 <p><strong>Rapid and sustained cooling reduces global inequity in climate impacts</strong> With Tamma Carleton (UC Berkeley)</p>
 <h4 id="heading-2"></h4>
