--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
   
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/publication/gw-airpol/">The effect of air pollution on GDP: evidence from a natural experiment in India</a>
+    <a href="https://drive.google.com/file/d/1HnWOI0Cn7Ojbw1-qi7tAKQe-p0Dfc-GQ/view?usp=sharing">The effect of air pollution on GDP: evidence from a natural experiment in India</a>
   </h3>
 
   
