--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
   
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/publication/indiarivers/">Industrial water pollution and agricultural production in India</a>
+    Industrial water pollution and agricultural production in India
   </h3>
 
   
