--- a/index.html
+++ b/index.html
@@ -839,7 +839,17 @@
   <h3 class="article-title mb-1 mt-3">
     Industrial water pollution and agricultural production in India
   </h3>
-
+We study how industrial water pollution affects agriculture in India, focusing
+on 48 industrial sites identified by the central government as “severely polluted.” Weexploit
+the spatial discontinuity in pollution concentrations that these sites generate along a
+river, comparing villages immediately downstream and upstream of each site. To overcome
+data limitations, we use hydrological modeling to compute spatial relationships
+and machine learning to predict crop yields from satellite data. We find a large, sudden
+rise in pollutant concentrations in nearby rivers downstream of sites, but we do not detect
+lower crop yields on average. Yields do fall in specific areas, but aggregate impacts are
+small. Likely reasons are that not all farms are exposed, pollution dilutes before reaching
+crops, and industrial effluent can include beneficial nutrients.Water pollution may have
+other social costs, but damages to crop yields is probably not one of them.
   
 
   
