--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
     Industrial water pollution and agricultural production in India
   </h3>
 We study how industrial water pollution affects agriculture in India, focusing
-on 48 industrial sites identified by the central government as “severely polluted.” Weexploit
+on 48 industrial sites identified by the central government as “severely polluted.” We exploit
 the spatial discontinuity in pollution concentrations that these sites generate along a
 river, comparing villages immediately downstream and upstream of each site. To overcome
 data limitations, we use hydrological modeling to compute spatial relationships
@@ -848,7 +848,7 @@ and machine learning to predict crop yields from satellite data. We find a large
 rise in pollutant concentrations in nearby rivers downstream of sites, but we do not detect
 lower crop yields on average. Yields do fall in specific areas, but aggregate impacts are
 small. Likely reasons are that not all farms are exposed, pollution dilutes before reaching
-crops, and industrial effluent can include beneficial nutrients.Water pollution may have
+crops, and industrial effluent can include beneficial nutrients. Water pollution may have
 other social costs, but damages to crop yields is probably not one of them.
   
 
@@ -869,8 +869,13 @@ other social costs, but damages to crop yields is probably not one of them.
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/IndiaRivers.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://drive.google.com/file/d/1P0kqtv-Ezo7rsumhwb2-WYIgPRhZztwQ/view?usp=sharing" target="_blank" rel="noopener">
   PDF
+</a>
+
+    
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href=https://www.journals.uchicago.edu/doi/10.1086/734935" target="_blank" rel="noopener">
+  Published article 
 </a>
 
 
