--- a/index.html
+++ b/index.html
@@ -879,12 +879,9 @@ other social costs, but damages to crop yields is probably not one of them.
 </a>
 
 
-
-
-
-
-
-
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href=https://www.ideasforindia.in/topics/environment/does-industrial-water-pollution-harm-agricultural-production.html" target="_blank" rel="noopener">
+  Ideas4India  
+</a>
 
 
 
