--- a/index.html
+++ b/index.html
@@ -1314,7 +1314,7 @@ and agricultural productivity that these results suggest.
   <span class="middot-divider"></span>
   <span class="pub-publication">
     
-      Job market paper
+      <strong>Job market paper</strong>
     
   </span>
   
