--- a/index.html
+++ b/index.html
@@ -1277,7 +1277,7 @@ and agricultural productivity that these results suggest.
 
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
-    <h1>WOrking papers</h1>
+    <h1>Working papers / In-Prep</h1>
     
   </div>
   <div class="col-12 col-lg-8">
