--- a/index.html
+++ b/index.html
@@ -1476,15 +1476,15 @@ In the presence of multiple market failures, correcting one distortion without a
     </div>
     <div class="col-12 col-lg-8">
       <h4 id="heading"></h4>
-<p><strong>The integration of renewables into the Indian electricity grid</strong>. With Fiona Burlig (UChicago), Akshaya Jha (CMU) and Louis Preonas (UMD)</p>
+<p><strong>The integration of renewables into the Indian electricity grid</strong>. With Fiona Burlig (UChicago), Akshaya Jha (CMU) and Louis Preonas (UMaryland)</p>
 <h4 id="heading-2"></h4>
-<p><strong>Social norms, behavioral traits and electricity bill nonpayments in India</strong>. DERF grant USD 35,000. With Fiona Burlig (UChicago) and Anant Sudarshan (Warwick)</p>
+<p><strong>Social norms, behavioral traits and electricity bill nonpayments in India. DERF grant USD 35,000. </strong> With Fiona Burlig (UChicago) and Anant Sudarshan (UWarwick)</p>
 <h4 id="heading-2"></h4>
-<p><strong>The heterogeneous impacts of air pollution from coal plants in India</strong>. IGC grant GBP 18,842. With Shefali Khanna (LSE) and Ed Rubin (UOregon)</p>
+<p><strong>The heterogeneous impacts of air pollution from coal plants in India. Lead PI, IGC grant GBP 18,842.</strong> With Shefali Khanna (LSE) and Ed Rubin (UOregon)</p>
 <h4 id="heading-1"></h4>
+<p><strong>Vehicle electrification, air pollution and the role of time-of-day tariffs. IGC grant GBP 28,500. </strong> With Rahul Tongia (CSEP), Anomitro Chatterjee (LSE), Piyush Bhardwaj (CSTEP)</p>
 <p><strong>How should we estimate income elasticites for climate damages?</strong> With James Rising</p>
-<p><strong>Vehicle electrification, air pollution and the role of time-of-day tariffs</strong>. IGC grant GBP 28,500. With Rahul Tongia (CSEP), Anomitro Chatterjee (LSE), Piyush Bhardwaj (CSTEP)</p>
-
+      
     </div>
   
 </div>
