--- a/index.html
+++ b/index.html
@@ -1402,7 +1402,7 @@ In the presence of multiple market failures, correcting one distortion without a
   methane emissions to deliver rapid cooling within a decade, but the equity consequences of such an approach are unknown. 
   In this paper, we study how global equity in mortality outcomes changes if an end-of-century global mean surface temperature (GMST) 
   target is achieved relatively quickly. Specifically, we analyze rapid, slow and delayed mitigation pathways, 
-  each achieved separately through abatement of methane (CH$_4$) or carbon dioxide (CO$_2$), all leading to the same GMST in 2100. 
+  each achieved separately through abatement of methane (CH$_4$) or carbon dioxide (CO2), all leading to the same GMST in 2100. 
   Two countervailing forces, inherent in nonlinear climate damage functions with adaptation, 
   make the global equity-based ordering of these pathways ambiguous. Drastic cooling measures later in the century, 
   when temperatures will be much higher, could save many more lives, since marginal damages are increasing in GMST. 
@@ -1411,7 +1411,7 @@ In the presence of multiple market failures, correcting one distortion without a
   combining annual mortality damage functions for each of 24,378 regions of the whole world for the 21st century, with the 
   predicted temporal profile of cooling for each pathway using state-of-the-art climate modeling. We find three main results. 
   First, mitigation always improves global equity in mortality outcomes. Second, the least effective methane pathway 
-  saves more lives throughout the century than the most effective CO$_2$ scenario. This result arises because an earlier cooling effect 
+  saves more lives throughout the century than the most effective CO2 scenario. This result arises because an earlier cooling effect 
   that is sustained over time saves more lives. Third, conditional on the choice of greenhouse gas, we document a clear ordering of
   mitigation pathways with respect to lives saved: rapid action dominates slower action, which dominates delayed action.  
 
