--- a/index.html
+++ b/index.html
@@ -1903,7 +1903,7 @@ In the presence of multiple market failures, correcting one distortion without a
       
       <li>
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-        <span id="person-email"><a href="mailto:atiwari2@uchicagotrust.org">atiwari2@uchicagotrust.org</a></span>
+        <span id="person-email"><a href="mailto:atiwari2@uchicago.edu">atiwari2@uchicago.edu</a></span>
       </li>
       
 
