--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/files/cv.pdf"><span>CV</span></a>
+          <a class="nav-link " href="https://drive.google.com/file/d/1Uo_liwUXgUG2Jk_npuxPVImeTu30RI9D/view?usp=sharing"><span>CV</span></a>
         </li>
 
         
