--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
     
 
   
-  <span >with <a href="https://www.nickhagerty.com/ Nick Hagerty </a> </span>
+  <span >with Nick Hagerty </span>
   </div>
   
   
