--- a/index.html
+++ b/index.html
@@ -1488,11 +1488,11 @@ In the presence of multiple market failures, correcting one distortion without a
       <h4 id="heading"></h4>
 <p><strong>The integration of renewables into the Indian electricity grid</strong>. With Fiona Burlig (UChicago), Akshaya Jha (CMU) and Louis Preonas (UMaryland)</p>
 <h4 id="heading-2"></h4>
-<p><strong>Social norms, behavioral traits and electricity bill nonpayments in India. DERF grant USD 35,000. </strong> With Fiona Burlig (UChicago) and Anant Sudarshan (UWarwick)</p>
+<p><strong>Social norms, behavioral traits and electricity bill nonpayments in India. </strong> With Fiona Burlig (UChicago) and Anant Sudarshan (UWarwick). <strong>DERF grant USD 35,000. </strong> </p>
 <h4 id="heading-2"></h4>
-<p><strong>The heterogeneous impacts of air pollution from coal plants in India. Lead PI, IGC grant GBP 18,842.</strong> With Shefali Khanna (LSE) and Ed Rubin (UOregon)</p>
+<p><strong>The heterogeneous impacts of air pollution from coal plants in India. </strong> With Shefali Khanna (LSE) and Ed Rubin (UOregon). <strong>Lead PI, IGC grant GBP 18,842. </strong> </p>
 <h4 id="heading-1"></h4>
-<p><strong>Vehicle electrification, air pollution and the role of time-of-day tariffs. IGC grant GBP 28,500. </strong> With Rahul Tongia (CSEP), Anomitro Chatterjee (LSE), Piyush Bhardwaj (CSTEP)</p>
+<p><strong>Vehicle electrification, air pollution and the role of time-of-day tariffs. </strong> With Rahul Tongia (CSEP), Anomitro Chatterjee (LSE), Piyush Bhardwaj (CSTEP).  <strong>Lead PI, IGC grant GBP 28,500. </strong></p>
 <p><strong>How should we estimate income elasticites for climate damages?</strong> With James Rising</p>
       
     </div>
