--- a/index.html
+++ b/index.html
@@ -1493,7 +1493,7 @@ In the presence of multiple market failures, correcting one distortion without a
 <p><strong>The heterogeneous impacts of air pollution from coal plants in India. </strong> With Shefali Khanna (LSE) and Ed Rubin (UOregon). <strong>Lead PI, IGC grant GBP 18,842. </strong> </p>
 <h4 id="heading-1"></h4>
 <p><strong>Vehicle electrification, air pollution and the role of time-of-day tariffs. </strong> With Rahul Tongia (CSEP), Anomitro Chatterjee (LSE), Piyush Bhardwaj (CSTEP).  <strong>Lead PI, IGC grant GBP 28,500. </strong></p>
-<p><strong>How should we estimate income elasticites for climate damages?</strong> With James Rising</p>
+<p><strong>How should we estimate income elasticites for climate damages?</strong> With James Rising (UDelaware)</p>
       
     </div>
   
