--- a/index.html
+++ b/index.html
@@ -1317,25 +1317,16 @@ Workfare programs like India’s NREGS can smooth consumption under climate-driv
   <h3 class="article-title mb-1 mt-3">
     Compliance without conservation when instruments interact
   </h3>
-In the presence of multiple market failures, correcting one distortion without addressing 
-  another can reduce welfare. But what happens if distortions are addressed
-  through separate instruments that themselves interact? We study this in the context of
-  a mandatory crop-calendar based groundwater regulation (”mandate”) in India that 
-  was layered on top of a binding electricity ration aimed at reducing electricity market
-  distortions. The mandate increases groundwater use efficiency and rainfall availability 
-  at the cost of lower rice productivity. The ration indirectly imposes a binding constraint 
-  on groundwater extraction because farmers use heavily-subsidized electricity
-  to pump groundwater. To understand the implications of the mandate for rice yields,
-  acreage and groundwater stock, we develop a farm production model under a binding 
-  electricity ration, nested in a groundwater stock framework. Using a synthetic
-  difference-in-differences design, we find that the mandate reduces rice yields by 3.9%
-  on average, with no detectable effects on untargeted maize, cotton, or wheat. Consistent 
-  with model predictions under a binding electricity ration, we find that (1) farmers 
-  rebound rice acreage to exploit water efficiency (2) groundwater stock falls further as
-  farmers are pre-constrained on extraction even as rainfall-driven recharge falls (3) the
-  stock effect is increasing in baseline depth to water due to recharge hydrology. When
-  multiple instruments to correct multiple market failures interact they can lead to costly
-  compliance without conservation.
+When multiple instruments target related market failures can their interaction nullify conservation gains? 
+  I study India’s 2009 groundwater mandate, which delayedrice transplantation to reduce evapotranspiration losses, 
+  layered on an existing elec-tricity ration that indirectly limits pumping. I develop a farm production model with a 
+  binding ration nested in a groundwater stock framework and test its predictions usinga synthetic difference-in-differences design. 
+  The mandate reduced rice yields by 3.9%without affecting other crops. Farmers expanded rice acreage, 
+  consistent with a re-bound effect to exploit improved water efficiency. Because pumping hours are capped by the electricity ration, 
+  intensive-margin extraction cannot fall; at the same time, aligning irrigation with the monsoon 
+  diverts rainfall from recharge to on-farm use.Therefore, aggregate groundwater stock fall by 3–4%. 
+  The result is costly com-pliance without conservation, illustrating how layering uncoordinated instruments 
+  to address multiple distortions can undermine policy goals.
 
   
   <div class="btn-links">
