--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@ Workfare programs like India’s NREGS can smooth consumption under climate-driv
   <h3 class="article-title mb-1 mt-3">
     Compliance without conservation when instruments interact
   </h3>
-Can the interaction between multiple instruments that target related market failures nullify conservation gains?  
+Can the interaction between instruments that target related market failures nullify desired conservation gains?  
   I study India’s 2009 groundwater mandate, which delayedrice transplantation to reduce evapotranspiration losses, 
   layered on an existing elec-tricity ration that indirectly limits pumping. I develop a farm production model with a 
   binding ration nested in a groundwater stock framework and test its predictions usinga synthetic difference-in-differences design. 
