--- a/index.html
+++ b/index.html
@@ -1313,16 +1313,17 @@ Workfare programs like India’s NREGS can smooth consumption under climate-driv
   <h3 class="article-title mb-1 mt-3">
     Compliance without conservation when instruments interact
   </h3>
-Can the interaction between instruments that target related market failures nullify desired conservation gains?  
-  I study India’s 2009 groundwater mandate, which delayedrice transplantation to reduce evapotranspiration losses, 
-  layered on an existing elec-tricity ration that indirectly limits pumping. I develop a farm production model with a 
-  binding ration nested in a groundwater stock framework and test its predictions usinga synthetic difference-in-differences design. 
-  The mandate reduced rice yields by 3.9% without affecting other crops. Farmers expanded rice acreage, 
-  consistent with a re-bound effect to exploit improved water efficiency. Because pumping hours are capped by the electricity ration, 
-  intensive-margin extraction cannot fall; at the same time, aligning irrigation with the monsoon 
-  diverts rainfall from recharge to on-farm use.Therefore, aggregate groundwater stock fall by 3–4%. 
-  The result is costly com-pliance without conservation, illustrating how layering uncoordinated instruments 
-  to address multiple distortions can undermine policy goals.
+Can interaction between instruments that target related market failures nullify desired conservation gains? 
+  I study India’s 2009 groundwater mandate, which delayed rice transplantation to reduce evapotranspiration losses, 
+  layered on an existing electricity ration that indirectly limits pumping. 
+  I develop a farm production model with a binding ration nested in a groundwater stock framework, 
+  and test its predictions using a synthetic difference-in-differences design. 
+  The mandate reduced rice yields by 3.9% without affecting other crops. 
+  Farmers expanded rice acreage, consistent with a rebound effect to exploit improved water efficiency. 
+  Because pumping hours are capped by the electricity ration, intensive-margin extraction cannot fall; 
+  at the same time, aligning irrigation with the monsoon diverts rainfall from recharge to on-farm use. 
+  Therefore, aggregate groundwater stock fall by 3–4%. 
+  Layering together uncoordinated instruments to address related distortions can result in costly compliance without conservation.
 
   
   <div class="btn-links">
