--- a/index.html
+++ b/index.html
@@ -1314,17 +1314,19 @@ Workfare programs like India’s NREGS can smooth consumption under climate-driv
   <h3 class="article-title mb-1 mt-3">
     Compliance without conservation when instruments interact
   </h3>
-Do interacting instruments for related market failures undo conservation gains?
-  I study India’s 2009 groundwater mandate, which delayed rice transplantation to reduce evapotranspiration losses, 
-  layered on an existing electricity ration that indirectly limits pumping. 
-  I develop a farm production model with a binding ration nested in a groundwater stock framework, 
-  and test its predictions using a synthetic difference-in-differences design. 
-  The mandate reduced rice yields by 3.9% without affecting other crops. 
-  Farmers expanded rice acreage, consistent with a rebound effect to exploit improved water efficiency. 
+Related market failures are often corrected using multiple policy instruments. 
+  But in a second-best setting where one distortion persists despite partial policy action, 
+  introducing an instrument to correct a related distortion may backfire. 
+  I show how this plays out in the context of groundwater and electricity market distortions in India. 
+  Two states mandated a delay in rice cultivation to improve groundwater-use efficiency, 
+  layered on an electricity ration that indirectly limited pumping. To study implications for farm outcomes and groundwater, 
+  I develop a farm production model with a binding ration nested in a groundwater-stock framework.
+  The mandate reduced rice yields by 3.9% without affecting other crops. Farmers expanded rice acreage, 
+  consistent with a predicted rebound effect that exploits improved water efficiency. 
   Because pumping hours are capped by the electricity ration, intensive-margin extraction cannot fall; 
-  at the same time, aligning irrigation with the monsoon diverts rainfall from recharge to on-farm use. 
-  Therefore, aggregate groundwater stock fall by 3–4%. 
-  Layering together uncoordinated instruments to address related distortions can result in costly compliance without conservation.
+  meanwhile, aligning irrigation with the monsoon diverts rainfall from recharge to onfarm use. 
+  Consequently, aggregate groundwater stocks fall by 3–4%. An instrument to correct one distortion, 
+  in the presence of a related distortion, can yield costly compliance without conservation.
 
   
   <div class="btn-links">
