--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="Anshuman Tiwari is a postdoctoral scholar at the Energy Policy Institute at University of Chicago - India">
+  <meta name="description" content="Anshuman Tiwari is a postdoctoral scholar at the Energy Policy Institute at University of Chicago">
 
   
   <link rel="alternate" hreflang="en-us" href="/">
