--- a/index.html
+++ b/index.html
@@ -1786,7 +1786,7 @@ Related market failures are often corrected using multiple policy instruments.
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="https://bppj.berkeley.edu/sites/default/files/fall2014_sp.pdf/" target="_blank" rel="noopener">Falling through the cracks</a>
+      <a href="https://bppj.berkeley.edu/sites/default/files/fall2014_sp.pdf" target="_blank" rel="noopener">Falling through the cracks</a>
     </h3>
 
     
